--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,45 @@
-body{
-    color:#ff0000
+html, body{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 100%;
+    background: #FFf;
+}
+
+body a {
+    transition:0.5s all;
+    -webkit-transition:0.5s all;
+    -moz-transition:0.5s all;
+    -o-transition:0.5s all;
+    -ms-transition:0.5s all;
+}
+@font-face {
+    font-family: 'Montserrat-Regular';
+    src: url(../fonts/Montserrat-Regular.ttf)format('truetype');
+}
+a:hover,h5.inner.two a:hover{
+    text-decoration:none;
+    color:#f26649;
+}
+input[type="button"],input[type="submit"],li.parallelogram{
+    transition:0.5s all;
+    -webkit-transition:0.5s all;
+    -moz-transition:0.5s all;
+    -o-transition:0.5s all;
+    -ms-transition:0.5s all;
+}
+h1,h2,h3,h4,h5,h6{
+    margin:0;
+    font-family: 'Montserrat-Regular';
+    font-weight:700;
+
+}
+p{
+    margin:0;
+    font-family: 'Open Sans', sans-serif;
+}
+ul{
+    margin:0;
+    padding:0;
+}
+label{
+    margin:0;
 }
