top news finished

--- a/css/style.less
+++ b/css/style.less
@@ -192,11 +192,31 @@ ul.top-nag{
       }
     }
     .banner{
+      padding:0;
       .b-bottom{
         margin-top: 1em;
         p a{
           margin:0 .2em;
         }
+      }
+    }
+    .top-news{
+      padding:2em 0;
+      .top-text{
+        padding-left:0;
+        p{
+          font-size:.9em;
+          font-weight: 400;
+          line-height:1.9em;
+          color:#777;
+          .glyphicon{
+            margin:0 .2em 0 2em !important;
+          }
+        }
+      }
+      .two{
+        padding-right:0;
+        padding-left:1em;
       }
     }
   }
