--- a/css/style.less
+++ b/css/style.less
@@ -4,7 +4,10 @@
 @sidebar-orange:#f26649;
 @cl-effect-color:#6f8686;
 @cl-effect-before:#ffcc00;
+@footer-bg-color:#222;
+@footer-font-color:#707073;
 @title-font-size:1.2em;
+@maintitle-font-size:2.5em;
 /*--top header start--*/
 .top-header{
     padding: 0em 2em;
@@ -12,6 +15,7 @@
 }
 ul.top-nag{
     float: left;
+    margin-bottom:0;
     li{
         display: inline-block;
         margin-left: 0;
@@ -31,33 +35,35 @@ ul.top-nag{
 }
 .search-box{
   float: right;
-  width: 15%;
-  margin-top: 0.6em;
+  width: 20%;
+  margin-top: 0.3em;
 }
 .b-search{
   position:relative;
+  height:2em;
   border:1px solid @bg-blue;
   padding:0.5em 0;
   background:@bg-blue;
   width:99%;
   input[type="text"]{
     width: 85%;
+    height:3.2em;
     outline:none;
     border:none;
     padding: 0 0.6em;
     font-size:0.9em;
     color:#fff;
-    background:@bg-blue;
+    background:@bg-blue - 11;
   }
   input[type="submit"]{
     background: url(../images/search.png) no-repeat 0px 2px;
     border: none;
-    height: 26px;
-    width: 26px;
+    height: 2em;
+    width: 2em;
     position: absolute;
     outline: none;
-    top: 6px;
-    right: 2px;
+    top: 1em;
+    right: 0.8em;
   }
 }
 /*--top header end--*/
@@ -66,7 +72,7 @@ ul.top-nag{
   float: left;
   background-color: @sidebar-orange;
   width: 15%;
-  padding:3em 1em 95em 1em;
+  padding:3em 1em 89.31em 1em;
   .logo a{
     display:block;
     h1{
@@ -163,9 +169,9 @@ ul.top-nag{
   width: 75%;
   padding: 0;
   .banner-section{
-    width: 100%;
+    width: 67%;
     float: left;
-    padding:2em 1em 1.5em 1em;
+    padding:0 1em 1.5em 1em;
     border-right: none;
     h3.title{
       color:#333;
@@ -220,5 +226,61 @@ ul.top-nag{
       }
     }
   }
+  .banner-right-text{
+    float: right;
+    width: 33%;
+    padding:0 1em 1.5em 1em;
+  }
 }
 /*--main content end--*/
+/*--footer start--*/
+.footer{
+  padding:1em 0 !important;
+  .footer-top{
+    background-color:@footer-bg-color;
+    .footer-grid{
+      h4 {
+        color: #fff;
+        font-size: 1.8em;
+      }
+      ul.bottom{
+        margin-top:1.6em;
+        li{
+          list-style: none;
+          display: block;
+          margin-bottom: 1em;
+          color:@footer-font-color;
+          i{
+            margin-right:.4em;
+          }
+          a{
+            color:@footer-font-color;
+            text-decoration: none;
+          }
+          a:hover{
+            color:@sidebar-orange;
+          }
+        }
+        li:hover{
+          color:@sidebar-orange;
+        }
+      }
+    }
+  }
+
+}
+/*--footer end--*/
+/*--copy start--*/
+.copy{
+  text-align: center;
+  background: @bg-blue;
+  padding: .5em;
+}
+/*--copy end--*/
+h3.tittle{
+  padding:1em 0 !important;
+  font-size:@maintitle-font-size - 0.5em;
+  i{
+    color:@sidebar-orange;
+  }
+}
