--- a/css/style.less
+++ b/css/style.less
@@ -8,6 +8,9 @@
 @footer-font-color:#707073;
 @title-font-size:1.2em;
 @maintitle-font-size:2.5em;
+.h-top{
+  width: 100%;
+}
 /*--top header start--*/
 .top-header{
     padding: 0em 2em;
