--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,12 @@ label{
         margin-top: 5em;
         margin-left: 7.5em;
     }
+    .top-menu .nav-list-button{
+        display: none;
+    }
+    .top-menu .cl-effect-16,.top-menu .side-icons {
+        display: block;
+    }
 }
 @media(max-width: 1600px){
     .top-nav{
@@ -110,6 +116,12 @@ label{
         margin-top: 5em;
         margin-left: 7.5em;
     }
+    .top-menu .nav-list-button{
+        display: none;
+    }
+    .top-menu .cl-effect-16,.top-menu .side-icons {
+        display: block;
+    }
 }
 @media(max-width: 1200px){
     .top-nav{
@@ -138,6 +150,12 @@ label{
     .top-nav .top-menu ul.side-icons{
         margin-top: 4em;
         margin-left: 2em;
+    }
+    .top-menu .nav-list-button{
+        display: none;
+    }
+    .top-menu .cl-effect-16,.top-menu .side-icons {
+        display: block;
     }
 }
 @media (max-width:991px) {
@@ -198,8 +216,17 @@ label{
         top: .7em;
         right: .7em;
     }
+    .nav-list-button{
+        display:none;
+    }
+    .top-menu .nav-list-button{
+        display: none;
+    }
+    .top-menu .cl-effect-16,.top-menu .side-icons {
+        display: block;
+    }
 }
-@media(max-width:769px){
+@media(max-width:768px){
     .top-nag a{
         font-weight: 500 !important;
         padding:.5em !important;
@@ -208,7 +235,7 @@ label{
     .top-nav {
         float: left;
         width: 25%;
-        padding: 3em 1em 197.47em 1em;
+        padding: .5em;
     }
     .top-nav{
         width:100%;
@@ -227,13 +254,15 @@ label{
         float: left;
         width: 50%;
     }
-    .media{
+    .main .banner-section .carousel-indicators-position {
+        bottom: 100% !important;
+        left: 80% !important;
+    }
+    .main{
         width: 100%;
     }
-    .top-nav.about {
-        float: left;
-        width: 25%;
-        padding: 3em 1em 209.7em 1em;
+    .media{
+        width: 100%;
     }
     .search-box{
         width: 100% !important;
@@ -268,5 +297,39 @@ label{
 
     .top-nav .top-menu ul.side-icons{
         margin-left: 2.5em;
+    }
+    .nav-list-button{
+        display:inline;
+        margin: 1em;
+        font-size:2em;
+    }
+    ul.top-nag li a {
+        font-size: 0.6em !important;
+        padding: 1em -5em !important;
+    }
+    .top-menu{
+        text-align: center;
+        margin:0em !important;
+    }
+    .top-menu .nav-list-button{
+        display: inline;
+    }
+    .top-menu .cl-effect-16,.top-menu .side-icons{
+        display: none;
+        -webkit-transition: ease-in-out 3s;
+        -moz-transition: ease-in-out 3s;
+        -ms-transition: ease-in-out 3s;
+        -o-transition: ease-in-out 3s;
+        transition: ease-in-out 3s;
+    }
+    .top-menu ul{
+        margin-top: 1em !important;
+    }
+    .footer{
+        width: 100%;
+        margin:0;
+    }
+    .copy{
+        margin-left: 0;
     }
 }
